--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@remix-project/remix-simulator": "^0.2.10",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.12",
+    "@vscode/codicons": "0.0.28",
     "ethereumjs-util": "^7.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
