--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "types"
   ],
   "compilerOptions": {
-    "module": "esnext",
-    "target": "esnext",
+    "module": "ES2022",
+    "target": "ES6",
     "moduleResolution": "node",
     "jsx": "preserve",
     "baseUrl": "./",
