--- a/package.json
+++ b/package.json
@@ -80,32 +80,30 @@
     ]
   },
   "scripts": {
-    "watch": "npx tsc --watch --project ./tsconfig.extension.json",
-    "tsc-build": "npx tsc ./src/extension.ts --outDir ./dist/ --skipLibCheck",
-    "start": "node ./dist/index.js",
-    "vscode:prepublish": "npm run tsc-build",
+    "extension-bundle": "esbuild ./src/extension.ts --bundle --outdir=./dist --sourcemap=inline --watch --external:vscode --external:electron --external:./compiler-worker --platform=node --format=cjs --tsconfig=./tsconfig.extension.json",
     "react-bundle": "esbuild ./src/remix-view/index.tsx --bundle --outdir=./dist/remix-view --sourcemap=inline --watch --tsconfig=./tsconfig.remixview.json",
     "css": "tailwindcss -i ./src/remix-view/index.css -o ./dist/remix-view/index.css --watch",
-    "dev": "concurrently 'npm:watch' 'npm:css' 'npm:react-bundle'"
+    "dev": "concurrently 'npm:extension-bundle' 'npm:css' 'npm:react-bundle'",
+    "start": "npm run dev",
+    "package": "vsce package"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@remix-project/remix-simulator": "^0.2.10",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.12",
     "@vscode/codicons": "0.0.28",
     "ethereumjs-util": "^7.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rxjs": "^7.5.4",
-    "save-dev": "0.0.1-security",
-    "solc": "^0.8.12",
+    "solc": "^0.7.4",
     "web3": "^1.7.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.12",
     "@types/node": "^17.0.21",
-    "@types/vscode": "^1.64.0",
+    "@types/vscode": "^1.34.0",
     "@types/web3": "^1.2.2",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -115,6 +113,7 @@
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "vsce": "^2.6.7"
   }
 }
