--- a/package.json
+++ b/package.json
@@ -101,9 +101,10 @@
     "react-dev": "npm run react-bundle -- --sourcemap=inline --watch --define:DEBUG=true",
     "css": "tailwindcss -i ./src/remix-view/index.css -o ./dist/remix-view/index.css",
     "css-dev": "npm run css -- --watch",
-    "dev": "concurrently 'npm:extension-dev' 'npm:css-dev' 'npm:react-dev'",
+    "copy-assets": "node copyAssets.js",
+    "dev": "concurrently 'npm:copy-assets' 'npm:extension-dev' 'npm:css-dev' 'npm:react-dev'",
     "start": "npm run dev",
-    "build": "npm run extension-bundle -- --minify --define:DEBUG=false && npm run react-bundle --minify --define:DEBUG=false && npm run css",
+    "build": "npm run copy-assets && npm run extension-bundle -- --minify --define:DEBUG=false && npm run react-bundle --minify --define:DEBUG=false && npm run css",
     "package": "vsce package --githubBranch=main"
   },
   "dependencies": {
