refactor file watchers + add artifacts and vyper files + add artifact file watcher and loader

--- a/testWorkspace/.vscode/settings.json
+++ b/testWorkspace/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-	"remix-light.contractGlobPattern": "test/**/*.sol"
+	"remix-light.artifactGlobPattern": "artifacts/**/*.json",
+	"remix-light.autoCompile": true
 }
