--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "remix-light",
   "displayName": "remix-light",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A light version of the Remix Ethereum IDE as a VSCode extension",
   "author": "maxdavid",
   "publisher": "maxdavidwow",
@@ -55,7 +55,7 @@
           "order": 4,
           "type": "string",
           "default": null,
-          "description": "Pattern used to search for solidity contract artifact files wich will be added to the deployable contracts."
+          "description": "Pattern used to search for contract artifact files wich will be added to the deployable contracts.\nNote that files defined by this glob pattern should be valid .json files as they will be interpreted as such!"
         }
       }
     },
